# MSproject

./: .gitignore  MSproject.code-workspace  README.md  docs_ms_project.docx  pyproject.toml
src/my_project/: analysis1.py  analysis2.py  analysis2__for_each_monkey.py  check_preprocessing.py  config.py  inspect_Data.py  preprocessing_data.py
src/my_project/inspect_data/: afterMSactivity_functions.py  analysis_functions2.py  preprocessing_functions.py
src/my_project/plotting_figures/: MScharacteristics.py  afterMSactivity.py  analysis1.py  analysis2__for_each_monkey.py  check_preprocessing.py  preprocessing_data.py
test/: test_extract_data_matlab.py
