[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-project"
requires-python = ">=3.12"
version = "1.0"
dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "matplotlib==3.9.2",
    "scipy==1.14.0",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]==7.3.1",
    "pytest-html==4.1.1",
    "build>=1.2.2"
]
